--- a/index.html
+++ b/index.html
@@ -57,6 +57,33 @@
             line-height: 1.6;
             color: #444;
         }
+         .youtube-player-container {
+            margin-top: 25px;
+            padding-top: 20px;
+            border-top: 1px dashed #ddd;
+        }
+        .youtube-player-container h3 {
+            margin-top: 0;
+            margin-bottom: 10px;
+            color: #333;
+        }
+        .youtube-player-wrapper {
+            position: relative;
+            padding-bottom: 56.25%; /* 16:9 Aspect Ratio */
+            height: 0;
+            overflow: hidden;
+            max-width: 100%;
+            background: #000; /* Svart bakgrund medan den laddar */
+            border-radius: 8px;
+        }
+        .youtube-player-wrapper iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: 0;
+        }
         .footer-note {
             font-size: 0.9em;
             color: #777;
