--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
             color: #4682b4; /* Stålblå */
             margin-top: 0;
         }
+
+<iframe id="week-video"  ß <!-- KONTROLLERA DETTA ID! -->
+        src=""
+        title="YouTube video player"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+</iframe>
+
+
         .week-info img {
             max-width: 100%;
             height: auto;
