--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         h1 {
             color: #ff69b4; /* Rosa för en "babykänsla" */
             margin-bottom: 10px;
-            /* Denna är redan centrerad p.g.a. body text-align: center */
         }
         #time-elapsed {
             font-size: 1.4em;
@@ -36,27 +35,53 @@
             font-weight: bold;
             margin-bottom: 20px;
         }
+        /* ---- NYTT: Stil för navigeringsknappar ---- */
+        .navigation-buttons {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            margin-top: 15px;
+            margin-bottom: 15px;
+        }
+        .navigation-buttons button {
+            padding: 10px 20px;
+            font-size: 1em;
+            cursor: pointer;
+            background-color: #4682b4;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            transition: background-color 0.2s;
+        }
+        .navigation-buttons button:hover:not(:disabled) {
+            background-color: #5a9bd4;
+        }
+        .navigation-buttons button:disabled {
+            background-color: #ccc;
+            cursor: not-allowed;
+        }
+        /* ------------------------------------------- */
         .week-info {
             border-top: 1px solid #eee;
             padding-top: 20px;
             margin-top: 20px;
-            text-align: left; /* Behåll denna för <p id="week-description"> */
+            text-align: left;
         }
-        .week-info h2 { /* Veckans rubrik */
-            color: #4682b4; /* Stålblå */
+        .week-info h2 {
+            color: #4682b4;
             margin-top: 0;
-            text-align: center; /* NYTT: Centrera veckans rubrik */
+            text-align: center;
         }
-        .week-info img { /* Veckans bild */
+        .week-info img {
             max-width: 100%;
             height: auto;
             border-radius: 8px;
             margin-top: 15px;
             margin-bottom: 15px;
             box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-            display: block; /* NYTT: Gör bilden till ett blockelement */
-            margin-left: auto; /* NYTT: Centrera blockelementet */
-            margin-right: auto; /* NYTT: Centrera blockelementet */
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
         }
         .week-info p {
             line-height: 1.6;
@@ -68,11 +93,11 @@
             padding-top: 20px;
             border-top: 1px dashed #ddd;
         }
-        .youtube-player-container h3 { /* Rubriken för YouTube-spelaren */
+        .youtube-player-container h3 {
             margin-top: 0;
             margin-bottom: 10px;
             color: #333;
-            text-align: center; /* NYTT: Centrera även denna rubrik */
+            text-align: center;
         }
         .youtube-player-wrapper {
             position: relative;
@@ -80,7 +105,7 @@
             height: 0;
             overflow: hidden;
             max-width: 100%;
-            background: #000; /* Svart bakgrund medan den laddar */
+            background: #000;
             border-radius: 8px;
         }
         .youtube-player-wrapper iframe {
@@ -103,12 +128,18 @@
         <h1>Graviditetskalender</h1>
         <div id="time-elapsed">Räknar...</div>
 
+        <!-- ---- NYTT: Knappar för navigering ---- -->
+        <div class="navigation-buttons">
+            <button id="prev-week-btn" disabled>← Föregående vecka</button>
+            <button id="next-week-btn" disabled>Nästa vecka →</button>
+        </div>
+        <!-- ----------------------------------- -->
+
         <div class="week-info" id="current-week-info">
             <h2 id="week-title">Information för aktuell vecka</h2>
             <img id="week-image" src="https://via.placeholder.com/400x300.webp?text=Väntar+på+vecka..." alt="Bild för aktuell vecka">
             <p id="week-description">Laddar information...</p>
 
-            <!-- YouTube Player Container -->
             <div class="youtube-player-container" id="youtube-container" style="display: none;">
                 <h3>Veckans video:</h3>
                 <div class="youtube-player-wrapper">
